--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^9.7.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
