--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,17 +2,21 @@
   "parser": "@babel/eslint-parser",
   "env": {
     "browser": true,
-    "es6": true
+    "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "next/core-web-vitals",
+    "prettier"
+  ],
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module",
-    "requireConfigFile": false
+    "ecmaVersion": 12,
+    "sourceType": "module"
   },
   "plugins": ["react", "prettier"],
   "rules": {
     "prettier/prettier": "error",
-    "react/prop-types": 0
+    "react/prop-types": "off"
   }
 }
