--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_URL=https://shoesstore-backend-production.up.railway.app/
+NEXT_PUBLIC_BACKEND_URL=https://shoesstore-backend-production.up.railway.app
 NEXT_PUBLIC_SOCKET_URL=http://localhost:3001
