--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# NEXT_PUBLIC_BACKEND_URL=http://localhost:8080
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
 # NEXT_PUBLIC_SOCKET_URL=http://localhost:3001
 
-NEXT_PUBLIC_BACKEND_URL=https://shoesstore-backend-production.up.railway.app
+# NEXT_PUBLIC_BACKEND_URL=https://shoesstore-backend-production.up.railway.app
 NEXT_PUBLIC_SOCKET_URL=https://socketio-production-62db.up.railway.app
