--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@
 
 NEXT_PUBLIC_BACKEND_URL=https://shoesstore-backend-production.up.railway.app
 NEXT_PUBLIC_SOCKET_URL=https://socketio-production-62db.up.railway.app
+
+NEXT_PUBLIC_MAILCHIMP_API_KEY=5494358d704c908d79d635d1f9fa6533-us13
+NEXT_PUBLIC_MAILCHIMP_AUDIENCE_ID=36d7809bc5
