--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
+    "js-cookie": "^3.0.5",
     "moment-timezone": "^0.5.45",
     "next": "14.2.5",
     "react": "^18",
