--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
     "js-cookie": "^3.0.5",
+    "json2csv": "^6.0.0-alpha.2",
     "moment-timezone": "^0.5.45",
     "next": "14.2.5",
     "react": "^18",
