--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "@mui/x-charts": "^7.11.0",
+    "@mui/x-data-grid": "^7.11.1",
     "@paypal/react-paypal-js": "^8.5.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@tinymce/tinymce-react": "^5.1.1",
@@ -29,12 +30,14 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
+    "firebase": "^10.12.4",
     "js-cookie": "^3.0.5",
     "json2csv": "^6.0.0-alpha.2",
     "moment-timezone": "^0.5.45",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "redux-persist": "^6.0.0",
