--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "@mui/x-charts": "^7.11.0",
@@ -28,15 +29,18 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
     "firebase": "^10.12.4",
     "js-cookie": "^3.0.5",
     "json2csv": "^6.0.0-alpha.2",
+    "mapbox-gl": "^3.5.2",
     "moment-timezone": "^0.5.45",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-map-gl": "^7.1.7",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
