--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
     "firebase": "^10.12.5",
+    "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "json2csv": "^6.0.0-alpha.2",
     "mapbox-gl": "^3.5.2",
